--- a/config/database.yml
+++ b/config/database.yml
@@ -12,11 +12,19 @@ default: &default
   username: root
   password: root
   host: 127.0.0.1
-  port: 8889
+  
+localdocker:
+  adapter: mysql2
+  database: boggledb
+  username: root
+  password:
+  host: db
 
 development:
   <<: *default
   database: boggledb
+  port: 8889
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
